Title alignment fixed to center.

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 #title-text {
-    max-width: 100%;
+    width: max-content;
     margin-left: auto;
     margin-right: auto;
 }
